--- a/Algo/coherent_min.tex
+++ b/Algo/coherent_min.tex
@@ -1,10 +1,10 @@
-\def\schemaScenario coherent_max{%
+\def\schemaScenario coherent_min{%
 \begin{tikzpicture}[scale=0.3]%
 \def\date{0};%
 \def\contraintName{C1};%
-\def\ypos{-2};%
+\def\ypos{-6};%
 \def\min{4};%
-\def\nom{9};%
+\def\nom{4};%
 \def\max{9};%
 \fill (\date,\ypos) circle (0.3);%
 \fill (\date+\nom,\ypos) circle (0.3);%
@@ -14,15 +14,15 @@
 \draw (\date+\max,\ypos+0.5) -- ++(0,-1);%
 %
 \def\nodeName{\Huge T0};%
-\def\ypos{-3};%
-\draw (\date,0) -- ++(-1,0.5) -- ++(0,2) -- ++(2,0) -- ++(0,-2) -- ++(-1,-0.5) -- (\date, \ypos);%
-\draw (\date,1.5) node[scale=0.5]{\nodeName};%
+\def\top{\ypos+1};%
+\draw (\date,\top) -- ++(-1,0.5) -- ++(0,2) -- ++(2,0) -- ++(0,-2) -- ++(-1,-0.5) -- (\date, \ypos);%
+\draw (\date,\top+1.5) node[scale=0.5]{\nodeName};%
 %
 \def\date{-3};%
 \def\contraintName{C2};%
-\def\ypos{-4};%
+\def\ypos{-2};%
 \def\min{9};%
-\def\nom{15};%
+\def\nom{9};%
 \def\max{15};%
 \fill (\date,\ypos) circle (0.3);%
 \fill (\date+\nom,\ypos) circle (0.3);%
@@ -32,15 +32,15 @@
 \draw (\date+\max,\ypos+0.5) -- ++(0,-1);%
 %
 \def\nodeName{\Huge T1};%
-\def\ypos{-5};%
-\draw (\date,0) -- ++(-1,0.5) -- ++(0,2) -- ++(2,0) -- ++(0,-2) -- ++(-1,-0.5) -- (\date, \ypos);%
-\draw (\date,1.5) node[scale=0.5]{\nodeName};%
+\def\top{\ypos+1};%
+\draw (\date,\top) -- ++(-1,0.5) -- ++(0,2) -- ++(2,0) -- ++(0,-2) -- ++(-1,-0.5) -- (\date, \ypos);%
+\draw (\date,\top+1.5) node[scale=0.5]{\nodeName};%
 %
-\def\date{12};%
+\def\date{6};%
 \def\contraintName{C3};%
-\def\ypos{-6};%
+\def\ypos{-4};%
 \def\min{6};%
-\def\nom{9};%
+\def\nom{6};%
 \def\max{9};%
 \fill (\date,\ypos) circle (0.3);%
 \fill (\date+\nom,\ypos) circle (0.3);%
@@ -50,15 +50,15 @@
 \draw (\date+\max,\ypos+0.5) -- ++(0,-1);%
 %
 \def\nodeName{\Huge T2};%
-\def\ypos{-7};%
-\draw (\date,0) -- ++(-1,0.5) -- ++(0,2) -- ++(2,0) -- ++(0,-2) -- ++(-1,-0.5) -- (\date, \ypos);%
-\draw (\date,1.5) node[scale=0.5]{\nodeName};%
+\def\top{\ypos+3};%
+\draw (\date,\top) -- ++(-1,0.5) -- ++(0,2) -- ++(2,0) -- ++(0,-2) -- ++(-1,-0.5) -- (\date, \ypos);%
+\draw (\date,\top+1.5) node[scale=0.5]{\nodeName};%
 %
-\def\date{9};%
+\def\date{4};%
 \def\contraintName{C4};%
 \def\ypos{-8};%
 \def\min{8};%
-\def\nom{12};%
+\def\nom{8};%
 \def\max{12};%
 \fill (\date,\ypos) circle (0.3);%
 \fill (\date+\nom,\ypos) circle (0.3);%
@@ -68,15 +68,15 @@
 \draw (\date+\max,\ypos+0.5) -- ++(0,-1);%
 %
 \def\nodeName{\Huge T3};%
-\def\ypos{-9};%
-\draw (\date,0) -- ++(-1,0.5) -- ++(0,2) -- ++(2,0) -- ++(0,-2) -- ++(-1,-0.5) -- (\date, \ypos);%
-\draw (\date,1.5) node[scale=0.5]{\nodeName};%
+\def\top{\ypos+3};%
+\draw (\date,\top) -- ++(-1,0.5) -- ++(0,2) -- ++(2,0) -- ++(0,-2) -- ++(-1,-0.5) -- (\date, \ypos);%
+\draw (\date,\top+1.5) node[scale=0.5]{\nodeName};%
 %
-\def\date{21};%
+\def\date{12};%
 \def\nodeName{\Huge T4};%
-\def\ypos{-9};%
-\draw (\date,0) -- ++(-1,0.5) -- ++(0,2) -- ++(2,0) -- ++(0,-2) -- ++(-1,-0.5) -- (\date, \ypos);%
-\draw (\date,1.5) node[scale=0.5]{\nodeName};%
+\def\top{\ypos+5};%
+\draw (\date,\top) -- ++(-1,0.5) -- ++(0,2) -- ++(2,0) -- ++(0,-2) -- ++(-1,-0.5) -- (\date, \ypos);%
+\draw (\date,\top+1.5) node[scale=0.5]{\nodeName};%
 %
 \end{tikzpicture}%
 }
