--- a/Algo/multi_cv.tex
+++ b/Algo/multi_cv.tex
@@ -1,82 +1,77 @@
-\def\schemaScenario coherent_exec1{%
-\begin{tikzpicture}[scale=0.4]%
+\def\schemaScenario multi_cv{%
+\begin{tikzpicture}[scale=0.3]%
 \def\date{0};%
-\def\contraintName{C1};%
-\def\ypos{-2};%
-\def\min{4};%
-\def\nom{5};%
-\def\max{9};%
-\fill (\date,\ypos) circle (0.3);%
-\fill (\date+\nom,\ypos) circle (0.3);%
-\draw (\date,\ypos) -- ++(\min,0) node[midway,above,scale=1] {\contraintName};%
-\draw (\date+\min,\ypos+0.5) -- ++(0,-1);%
-\draw[dotted] (\date+\min,\ypos) -- (\date+\max,\ypos);%
-\draw (\date+\max,\ypos+0.5) -- ++(0,-1);%
-%
 \def\nodeName{\Huge T0};%
-\def\ypos{-3};%
-\draw (\date,0) -- ++(-1,0.5) -- ++(0,2) -- ++(2,0) -- ++(0,-2) -- ++(-1,-0.5) -- (\date, \ypos);%
-\draw (\date,1.5) node[scale=0.5]{\nodeName};%
+\def\bottom{-5.41082};%
+\def\top{-1.5};%
+\draw (\date,\top) -- ++(-1,0.5) -- ++(0,2) -- ++(2,0) -- ++(0,-2) -- ++(-1,-0.5) -- (\date, \bottom);%
+\draw (\date,\top + 1.5) node[scale=0.5]{\nodeName};%
 %
-\def\date{-3};%
-\def\contraintName{C2};%
-\def\ypos{-4};%
-\def\min{9};%
-\def\nom{10};%
-\def\max{15};%
-\fill (\date,\ypos) circle (0.3);%
-\fill (\date+\nom,\ypos) circle (0.3);%
-\draw (\date,\ypos) -- ++(\min,0) node[midway,above,scale=1] {\contraintName};%
-\draw (\date+\min,\ypos+0.5) -- ++(0,-1);%
-\draw[dotted] (\date+\min,\ypos) -- (\date+\max,\ypos);%
-\draw (\date+\max,\ypos+0.5) -- ++(0,-1);%
-%
-\def\nodeName{\Huge T1};%
-\def\ypos{-5};%
-\draw (\date,0) -- ++(-1,0.5) -- ++(0,2) -- ++(2,0) -- ++(0,-2) -- ++(-1,-0.5) -- (\date, \ypos);%
-\draw (\date,1.5) node[scale=0.5]{\nodeName};%
-%
-\def\date{7};%
-\def\contraintName{C3};%
-\def\ypos{-6};%
-\def\min{6};%
-\def\nom{7};%
-\def\max{9};%
-\fill (\date,\ypos) circle (0.3);%
-\fill (\date+\nom,\ypos) circle (0.3);%
-\draw (\date,\ypos) -- ++(\min,0) node[midway,above,scale=1] {\contraintName};%
-\draw (\date+\min,\ypos+0.5) -- ++(0,-1);%
-\draw[dotted] (\date+\min,\ypos) -- (\date+\max,\ypos);%
-\draw (\date+\max,\ypos+0.5) -- ++(0,-1);%
-%
+\def\date{9};%
 \def\nodeName{\Huge T2};%
-\def\ypos{-7};%
-\draw (\date,0) -- ++(-1,0.5) -- ++(0,2) -- ++(2,0) -- ++(0,-2) -- ++(-1,-0.5) -- (\date, \ypos);%
-\draw (\date,1.5) node[scale=0.5]{\nodeName};%
-%
-\def\date{5};%
-\def\contraintName{C4};%
-\def\ypos{-8};%
-\def\min{8};%
-\def\nom{9};%
-\def\max{12};%
-\fill (\date,\ypos) circle (0.3);%
-\fill (\date+\nom,\ypos) circle (0.3);%
-\draw (\date,\ypos) -- ++(\min,0) node[midway,above,scale=1] {\contraintName};%
-\draw (\date+\min,\ypos+0.5) -- ++(0,-1);%
-\draw[dotted] (\date+\min,\ypos) -- (\date+\max,\ypos);%
-\draw (\date+\max,\ypos+0.5) -- ++(0,-1);%
-%
-\def\nodeName{\Huge T3};%
-\def\ypos{-9};%
-\draw (\date,0) -- ++(-1,0.5) -- ++(0,2) -- ++(2,0) -- ++(0,-2) -- ++(-1,-0.5) -- (\date, \ypos);%
-\draw (\date,1.5) node[scale=0.5]{\nodeName};%
+\def\bottom{-3.45691};%
+\def\top{-0.400802};%
+\draw (\date,\top) -- ++(-1,0.5) -- ++(0,2) -- ++(2,0) -- ++(0,-2) -- ++(-1,-0.5) -- (\date, \bottom);%
+\draw (\date,\top + 1.5) node[scale=0.5]{\nodeName};%
 %
 \def\date{14};%
-\def\nodeName{\Huge T4};%
-\def\ypos{-9};%
-\draw (\date,0) -- ++(-1,0.5) -- ++(0,2) -- ++(2,0) -- ++(0,-2) -- ++(-1,-0.5) -- (\date, \ypos);%
-\draw (\date,1.5) node[scale=0.5]{\nodeName};%
+\def\nodeName{\Huge T3};%
+\def\bottom{-5.41082};%
+\def\top{-0.400802};%
+\draw (\date,\top) -- ++(-1,0.5) -- ++(0,2) -- ++(2,0) -- ++(0,-2) -- ++(-1,-0.5) -- (\date, \bottom);%
+\draw (\date,\top + 1.5) node[scale=0.5]{\nodeName};%
+%
+\def\contraintName{C1};%
+\def\ypos{-1.90381};%
+\def\date{0};
+\def\min{9};%
+\def\nom{9};%
+\def\max{9};%
+\fill (\date,\ypos) circle (0.3);%
+\fill (\date+\nom,\ypos) circle (0.3);%
+\draw (\date,\ypos) -- ++(\min,0) node[midway,above,scale=1] {\contraintName};%
+\draw (\date+\min,\ypos+0.5) -- ++(0,-1);%
+\draw[dotted] (\date+\min,\ypos) -- (\date+\max,\ypos);%
+\draw (\date+\max,\ypos+0.5) -- ++(0,-1);%
+%
+\def\contraintName{C2};%
+\def\ypos{-0.400802};%
+\def\date{9};
+\def\min{5};%
+\def\nom{5};%
+\def\max{5};%
+\fill (\date,\ypos) circle (0.3);%
+\fill (\date+\nom,\ypos) circle (0.3);%
+\draw (\date,\ypos) -- ++(\min,0) node[midway,above,scale=1] {\contraintName};%
+\draw (\date+\min,\ypos+0.5) -- ++(0,-1);%
+\draw[dotted] (\date+\min,\ypos) -- (\date+\max,\ypos);%
+\draw (\date+\max,\ypos+0.5) -- ++(0,-1);%
+%
+\def\contraintName{C3};%
+\def\ypos{-3.45691};%
+\def\date{9};
+\def\min{5};%
+\def\nom{5};%
+\def\max{5};%
+\fill (\date,\ypos) circle (0.3);%
+\fill (\date+\nom,\ypos) circle (0.3);%
+\draw (\date,\ypos) -- ++(\min,0) node[midway,above,scale=1] {\contraintName};%
+\draw (\date+\min,\ypos+0.5) -- ++(0,-1);%
+\draw[dotted] (\date+\min,\ypos) -- (\date+\max,\ypos);%
+\draw (\date+\max,\ypos+0.5) -- ++(0,-1);%
+%
+\def\contraintName{C4};%
+\def\ypos{-5.41082};%
+\def\date{0};
+\def\min{14};%
+\def\nom{14};%
+\def\max{14};%
+\fill (\date,\ypos) circle (0.3);%
+\fill (\date+\nom,\ypos) circle (0.3);%
+\draw (\date,\ypos) -- ++(\min,0) node[midway,above,scale=1] {\contraintName};%
+\draw (\date+\min,\ypos+0.5) -- ++(0,-1);%
+\draw[dotted] (\date+\min,\ypos) -- (\date+\max,\ypos);%
+\draw (\date+\max,\ypos+0.5) -- ++(0,-1);%
 %
 \end{tikzpicture}%
 }
